fix(console): unexpected spacing under item-preview icon

--- a/packages/console/src/pages/ApiResources/index.module.scss
+++ b/packages/console/src/pages/ApiResources/index.module.scss
@@ -15,7 +15,7 @@
 }
 
 .icon {
-  @include _.image-block;
+  display: block;
 }
 
 .pagination {
